<resources>
    <string name="app_name">ThucTapTuan1VNPT</string>
    <string name="envivar">Envivar</string>
    <string name="recibir">Recibir</string>
    <string name="perfil">Perfil</string>
    <string name="myname">NGUYEN NGOC SON</string>
    <string name="_44_97">44,97€</string>
    <string name="details">VER DETALLES</string>
    <string name="hoy">HOY</string>
    <string name="pizza">Por la cena..🍕</string>
    <string name="mesaje">Mesaje</string>
    <string name="enviar_de_nuevo">Enviar de nuevo</string>
    <string name="carlos_roca">Carlos Roca</string>
    <string name="ruby_sanz">Ruby Sanz</string>
    <string name="jos_porto">José Porto</string>
    <string name="mary_rich">Mary Rich</string>
    <string name="actividad">Actividad</string>
    <string name="ver_m_s_movimientos">Ver más movimientos</string>
    <string name="el_corte_ingl_s">El corte inglés</string>
    <string name="pago_aceptado">Pago aceptado</string>
    <string name="_50">-50€</string>
    <string name="maria_lujan">Maria Lujan</string>
    <string name="_650">650€</string>
    <string name="revisar_y_enviar">Revisar y enviar</string>
    <string name="david_paz">David Paz</string>
    <string name="davidpaz_correo_com">davidpaz@correo.com</string>
    <string name="mensaje_2">Mensaje</string>
    <string name="este_es_el_dinero_de_la_entradas">Este es el dinero de la entradas…🎬</string>
    <string name="_20_00_1">20,00€</string>
    <string name="tipo_de_pago">Tipo de pago</string>
    <string name="personal">Personal</string>
    <string name="bbva">BBVA</string>
    <string name="_9889">****9889</string>
    <string name="tarifas_por_transacci_n">Tarifas por transacción</string>
    <string name="_0_00">0,00€</string>
    <string name="t_pagas">Tú pagas</string>
    <string name="_20_00">20,00€</string>
    <string name="enviar_ahora">ENVIAR AHORA</string>
    <string name="cuentas_bancarias_y_tarjetas">Cuentas bancarias y tarjetas</string>
    <string name="mantenemos_tus_datos_financieros_protegidos_para_que_nadie_vea_la_informaci_n_confidencial">Mantenemos tus datos financieros protegidos para que nadie vea la información confidencial.</string>
    <string name="mis_tarjetas">Mis tarjetas</string>
    <string name="mastercard">Mastercard</string>
    <string name="_9889_">****9889</string>
    <string name="visa_black">Visa black</string>
    <string name="_8764">****8764</string>
</resources>