<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/bottom_bar_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/path_4"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/iv_envivar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:src="@drawable/ic_assignment_returned_black_18_dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar_dashboard"
        app:layout_constraintLeft_toLeftOf="@id/bottom_bar_dashboard"
        app:layout_constraintTop_toTopOf="@id/bottom_bar_dashboard" />

    <TextView
        android:id="@+id/tv_envivar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/envivar"
        android:textColor="#999999"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar_dashboard"
        app:layout_constraintLeft_toLeftOf="@id/iv_envivar"
        app:layout_constraintRight_toRightOf="@id/iv_envivar"
        app:layout_constraintTop_toBottomOf="@id/iv_envivar" />

    <TextView
        android:id="@+id/tv_recibir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/recibir"
        android:textColor="#999999"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_envivar"
        app:layout_constraintLeft_toRightOf="@id/tv_envivar"
        app:layout_constraintRight_toLeftOf="@id/tv_perfil"
        app:layout_constraintTop_toTopOf="@id/tv_envivar" />

    <TextView
        android:id="@+id/tv_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/perfil"
        android:textColor="#999999"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_envivar"
        app:layout_constraintLeft_toLeftOf="@id/iv_perfil"
        app:layout_constraintRight_toRightOf="@id/iv_perfil"
        app:layout_constraintTop_toTopOf="@id/tv_envivar" />

    <ImageView
        android:id="@+id/iv_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:src="@drawable/ic_shape"
        app:layout_constraintBottom_toBottomOf="@id/iv_envivar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_envivar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:adjustViewBounds="true"
        android:background="@drawable/dashboard_button"
        android:padding="23dp"
        android:src="@drawable/ic_assignment_returned_black_18_dp"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_recibir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>