<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f8fa">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="30dp"
        android:layout_height="0dp">

        <include
            android:id="@+id/heading"
            layout="@layout/action_bar_cards" />

        <ImageView
            android:id="@+id/iv_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:adjustViewBounds="true"
            android:src="@drawable/group2"
            app:layout_constraintBottom_toBottomOf="@+id/heading"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <TextView
            android:id="@+id/tv_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/mis_tarjetas"
            android:textColor="#001d50"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/iv_card"
            app:layout_constraintTop_toBottomOf="@+id/iv_card" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/dashboard_trading"
            android:padding="18dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_1">

            <ImageView
                android:id="@+id/iv_master_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mastercard_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/mastercard"
                android:textColor="#1b1b1b"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/iv_master_card"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/_9889_"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_name_item_1"
                app:layout_constraintTop_toBottomOf="@id/tv_name_item_1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="@id/iv_master_card"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_master_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/dashboard_trading"
            android:padding="18dp"
            app:layout_constraintTop_toBottomOf="@id/item_1">

            <ImageView
                android:id="@+id/iv_visa_card_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_combined_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/visa_black"
                android:textColor="#1b1b1b"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/iv_visa_card_1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/_8764"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_name_item_2"
                app:layout_constraintTop_toBottomOf="@id/tv_name_item_2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="@id/iv_visa_card_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_visa_card_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/dashboard_trading"
            android:padding="18dp"
            app:layout_constraintTop_toBottomOf="@id/item_2">

            <ImageView
                android:id="@+id/iv_visa_card_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_combined_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/visa_black"
                android:textColor="#1b1b1b"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/iv_visa_card_2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/_8764"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_name_item_3"
                app:layout_constraintTop_toBottomOf="@id/tv_name_item_3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="@id/iv_visa_card_2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_visa_card_2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/cards_adding"
            android:padding="20dp"
            android:src="@drawable/ic_baseline_add_24"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/item_3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>